# humble_blockchain

./: Cargo.toml  README.md  test_gossip.rs
.github/workflow/: rust.yml
app/: Cargo.toml
app/src/: main.rs
chain/: Cargo.toml
chain/src/: chain.rs  lib.rs
chain/src/block/: block.rs  block_entry.rs  block_member.rs
chain/src/miner/: miner.rs
chain/tests/: mod.rs  test_block.rs  test_chain.rs  test_core.rs
network/: Cargo.toml
network/src/: lib.rs
network/src/dht/: peer.rs
network/src/node/: gossip.rs  mod.rs  neighbour.rs  node.rs  protocol.rs  receiver.rs  reply.rs  theme.rs
network/src/object/: mod.rs  object.rs
network/tests/: test_gossip.rs
src/: main.rs
src/chain/: chain.rs
src/chain/block/: block.rs
src/dht/: mod.rs  peer.rs
src/miner/: miner.rs
src/node/: gossip.rs  mod.rs  neighbour.rs  node.rs  protocol.rs  receiver.rs  reply.rs  theme.rs
src/test/: test_core.rs  test_gossip.rs  test_peer.rs
src/tests/: mod.rs  test_core.rs  test_gossip.rs  test_peer.rs
src/transaction/: transaction.rs
src/wallet/: wallet.rs
store/: Cargo.toml
store/src/: engine.rs  file_engine.rs  lib.rs  store.rs
store/tests/: test_store.rs
transaction/: Cargo.toml
transaction/src/: lib.rs  record.rs  transaction.rs
wallet/: Cargo.toml
wallet/src/: block_chain.rs  lib.rs  token.rs  wallet.rs
wallet/src/transaction/: .transaction.rs.swp  block_entry_common.rs  record.rs  transaction.rs
wallet/tests/: .transaction.rs.swp  test_record.rs  test_transaction.rs  test_wallet.rs  transaction.rs
