[package]
name = "wallet"
version = "0.1.0"
edition = "2021" # or 2021
description = "Blockchain and block structures"
license = "MIT"

[dependencies]
# Add crates used in chain, e.g., serialization, crypto
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }
static_assertions = "1.1.0"
serde = { version = "1.0.210", features = ['derive', 'rc'] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
thiserror = "1.0"
base64 = "0.21.0"
ring = "0.17.8"
rand = "0.8.5"
chrono = "0.4.38"
sha2 = "0.10.6"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
derive_more = "^0.99"
xxhash-rust = {version = "0.8.5", features = ["xxh3", "const_xxh3"]}

transaction = {path = "../transaction"}
